--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "leaflet": "^1.3.4",
+    "leaflet.icon.glyph": "^0.2.0",
     "vue": "2.5.17",
     "vue-router": "3.0.1",
+    "vue2-leaflet": "1.0.2",
     "vuex": "3.0.1"
   },
   "devDependencies": {
