--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "leaflet": "^1.3.4",
     "leaflet.icon.glyph": "^0.2.0",
     "vue": "2.5.17",
